# hi-agent

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff_hi_agent.json  .ruff_tests_strict.json  ARCHITECTURE.md  CLAUDE.md  README.md  checkpoint_cli-resume-test.json  manifest.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  claude-rules.yml  main-ci.yml  release-gate.yml  smoke.yml
agent_kernel/: ARCHITECTURE.md  __init__.py  config.py  testing.py  worker_main.py
agent_kernel/adapters/: __init__.py
agent_kernel/kernel/: __init__.py  action_type_registry.py  adapter_ports.py  branch_monitor.py  capability_snapshot.py  capability_snapshot_resolver.py  contracts.py  dedupe_store.py  event_export.py  event_registry.py  failure_code_registry.py  failure_evidence.py  (+10 more)
agent_server/: ARCHITECTURE.md  __init__.py  bootstrap.py
architecture-review/: 2026-04-05-agent-core-capability-mapping.md  2026-04-05-agent-kernel-gap-list.md  2026-04-05-agent-kernel-negotiation-review.md  2026-04-05-agent-kernel-reassessment-after-fixes.md  2026-04-05-agent-kernel-systematic-assessment.md  2026-04-05-response-to-agent-kernel-team.md  2026-04-05-review-response-v1.1.md  2026-04-05-review-response-v1.2.md  2026-04-05-review-response.md  2026-04-05-trace-architecture-design-v2.0.md  2026-04-05-trace-architecture-review-v1.1.md  2026-04-05-trace-architecture-review-v1.2.1.md  2026-04-05-trace-architecture-review-v1.2.md  2026-04-05-trace-architecture-review.md  2026-04-05-trace-contract-mapping.md  2026-04-05-trace-runtime-arbitration.md  2026-04-05-trace-spec-contracts-and-interfaces-v2.0.md  2026-04-08-architecture-status.md  Feedback from agent-kernel team.txt  From Claude  - V1 .1.txt  From Claude  - V1 .2.txt  From Claude  - V1.txt  From Geimini - V1.1.txt  From Geimini - V1.2.txt  From Geimini - V1.txt
config/: llm_config.example.json  llm_config.json  mcp_servers.json  tools.json
deploy/: ecosystem.config.js
docs/: TODO.md  agent-kernel-caller-audit-2026-04-15.md  agent-kernel-evolution-proposal.md  agent-kernel-integration-proposal.md  api-key-source.md  api-reference.md  architecture-reference.md  capability-boundaries.md  clean-env-verification.md  contracts-reference.md  current-wave.txt  deployment-env-matrix.md  execution-plan-ops-reliability-and-evolution.md  extension-guide.md  failure-attribution.md  hi-agent-code-review-notes-2026-04-17.md  hi-agent-code-review-notes-2026-04-20.md  hi-agent-contract-issues-20260419.md  hi-agent-contract-issues-20260419.v1.md  hi-agent-engineering-execution-playbook-2026-04-17.md  hi-agent-implementation-plan-2026-04-17.md  hi-agent-implementation-plan-w2-w5-2026-04-17.md  hi-agent-implementation-plan-w6-w12-2026-04-17.md  hi-agent-large-scale-engineering-improvement-plan-2026-04-17.md  hi-agent-large-scale-engineering-improvement-response-2026-04-17.md  hi-agent-large-scale-engineering-improvement-response-review-2026-04-17.md  hi-agent-optimization-requests-2026-04-15-round2.md  hi-agent-optimization-requests-2026-04-15-round3.md  hi-agent-optimization-requests.md  hi-agent-optimization-response-2026-04-15-round2.md  hi-agent-optimization-response-2026-04-15-round3.md  hi-agent-optimization-response-2026-04-15-round4.md  hi-agent-optimization-response-2026-04-15-round5.md  hi-agent-optimization-response-2026-04-15-round6.md  hi-agent-optimization-response-2026-04-15-round7.md  hi-agent-optimization-response-2026-04-15-round8.md  hi-agent-optimization-response-2026-04-15-self-audit.md  hi-agent-optimization-response-2026-04-15.md  hi-agent-prod-mode-issue-20260421.md  hi-agent-prod-mode-issue-20260422.md  (+21 more)
examples/: __init__.py
hi_agent/: ARCHITECTURE.md  RUNTIME-LAYERS.md  __init__.py  __main__.py  _sqlite_init.py  cli.py  executor_facade.py  gate_protocol.py  identity.py  runner.py  runner_lifecycle.py  runner_stage.py  runner_telemetry.py
scripts/: _current_wave.py  _governance_json.py  audit_unit_test_purity.py  backfill_provenance.py  build_observability_spine_e2e_real.py  build_observability_spine_evidence.py  build_release_manifest.py  check_admin_session_store_imports.py  check_agent_kernel_pin.py  check_allowlist_discipline.py  check_allowlist_universal.py  check_async_init_resources.py  check_boundary.py  check_capability_maturity.py  check_chaos_runtime_coupling.py  check_clean_env.py  check_closure_levels.py  check_closure_taxonomy.py  check_conftest_fallback_scope.py  check_contract_freeze.py  check_contract_spine_completeness.py  check_contracts_purity.py  check_deprecated_field_usage.py  check_doc_canonical_symbols.py  check_doc_consistency.py  check_doc_truth.py  check_documented_routes.py  check_downstream_response_format.py  check_durable_wiring.py  check_evidence_identity.py  check_evidence_provenance.py  check_expired_waivers.py  check_facade_loc.py  check_facade_seams.py  check_gate_strictness.py  check_layering.py  check_manifest_budget.py  check_manifest_freshness.py  check_manifest_rewrite_budget.py  check_metric_producers.py  (+82 more)
tests/: __init__.py  conftest.py  profiles.toml  test_alerts.py  test_alerts_commands.py  test_anthropic_gateway.py  test_artifact_contracts.py  test_artifact_in_execution_chain.py  test_async_invoker.py  test_async_kernel_facade_adapter.py  test_async_llm_integration.py  test_async_scheduler.py  test_async_scheduler_load.py  test_audit_timeline.py  test_auth.py  test_auth_command_context.py  test_auth_rbac.py  test_auto_dream_consolidation.py  test_branch_id_consistency.py  test_budget_guard.py  test_budget_guard_config.py  test_builder_capability_chain.py  test_builder_config_override_inherits.py  test_builtin_tool_policy.py  test_builtin_tools.py  test_capability.py  test_capability_adapters.py  test_capability_descriptor.py  test_capability_invoker_resilience.py  test_capability_policy.py  test_capability_policy_fine_grained.py  test_capacity_advisor.py  test_champion_challenger_wiring.py  test_circuit_breaker.py  test_cli.py  test_cli_config.py  test_cli_tools.py  test_conditional_router.py  test_confidence_commands.py  test_confidence_scorer.py  (+167 more)
(+2883 files in other folders)
