[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hi-agent"
version = "0.1.0"
description = "TRACE enterprise agent implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.28",
  "pyjwt>=2.8",
  "starlette>=0.37",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
temporal = ["temporalio==1.24.0"]
pg = ["asyncpg>=0.30"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50", "tiktoken>=0.7"]
llm = ["anthropic>=0.40", "openai>=1.50", "tiktoken>=0.7"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=1.0",
  "pytest-cov>=6.0",
  "pytest-timeout>=2.3",
  "pytest-xdist>=3.5",
  "respx>=0.23",
  "ruff>=0.8",
  "anthropic>=0.40",
  "openai>=1.50",
  "tiktoken>=0.7",
  "jsonschema>=4.0",
  "pytest-json-report>=1.5",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hi_agent*", "agent_kernel*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# cache_dir lives inside the repo so restricted Windows workspaces (where
# %LOCALAPPDATA% may be locked) can still run the suite.  Override with
# PYTEST_CACHE_DIR or --cache-dir if a different location is required.
cache_dir = ".pytest_cache"
addopts = ["--strict-markers", "--timeout=60"]
tmp_path_retention_policy = "failed"
markers = [
    "integration: integration tests using real components",
    "live_api: live API tests that call real external model endpoints (require VOLCE_API_KEY)",
    "prod_e2e: production end-to-end tests that require real model credentials",
    "smoke: import and minimal instantiation tests — no external dependencies required",
    "serial: must not run in parallel (SQLite, file locks, port binding)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["hi_agent", "agent_kernel", "tests"]
exclude = [".claude", ".worktrees", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["D203", "D213", "E402"]
allowed-confusables = ["，", "！", "（", "）", "："]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
source = ["hi_agent"]
branch = true
omit = [
    "hi_agent/__main__.py",
    "hi_agent/samples/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
