[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hi-agent"
version = "0.1.0"
description = "TRACE enterprise agent implementation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "httpx>=0.28",
  "pyjwt>=2.8",
  "starlette>=0.37",
  "uvicorn[standard]>=0.29",
]

[project.scripts]
agent-server = "agent_server.cli.main:main"

[project.optional-dependencies]
temporal = ["temporalio==1.24.0"]
pg = ["asyncpg>=0.30"]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50", "tiktoken>=0.7"]
llm = ["anthropic>=0.40", "openai>=1.50", "tiktoken>=0.7"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=1.0",
  "pytest-cov>=6.0",
  "pytest-timeout>=2.3",
  "pytest-xdist>=3.5",
  "respx>=0.23",
  "ruff>=0.8",
  "anthropic>=0.40",
  "openai>=1.50",
  "tiktoken>=0.7",
  "jsonschema>=4.0",
  "pytest-json-report>=1.5",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hi_agent*", "agent_kernel*", "agent_server*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# cache_dir lives inside the repo so restricted Windows workspaces (where
# %LOCALAPPDATA% may be locked) can still run the suite.  Override with
# PYTEST_CACHE_DIR or --cache-dir if a different location is required.
cache_dir = ".pytest_cache"
addopts = ["--strict-markers", "--timeout=60"]
tmp_path_retention_policy = "failed"
markers = [
    "integration: integration tests using real components",
    "live_api: live API tests that call real external model endpoints (require VOLCE_API_KEY); excluded from default-offline bundle",
    "prod_e2e: production end-to-end tests that require real model credentials",
    "smoke: import and minimal instantiation tests — no external dependencies required",
    "serial: must not run in parallel (SQLite, file locks, port binding)",
    "external_llm: requires real LLM provider endpoint; excluded from default-offline bundle",
    "network: makes real network calls to external services; excluded from default-offline bundle",
    "requires_secret: requires populated API secret; excluded from default-offline bundle",
    "e2e: tests that exercise the full system end-to-end",
    "perf: performance and load tests",
    "slow: marks tests as slow (>30s)",
    "anyio: marks tests as anyio async tests",
    "windows_unsafe: test uses IOCP/asyncio in a way that hangs on Windows; excluded from default-offline on win32",
    "posture_matrix: parametrized posture-aware tests covering dev/research/prod branches (Rule 11)",
    "unit: pure unit tests (no network, no filesystem, no real dependencies)",
    "chaos: chaos-injection tests that exercise fault scenarios against the real runtime",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["hi_agent", "agent_kernel", "agent_server", "tests"]
exclude = [".claude", ".worktrees", ".git"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["D203", "D213", "E402"]
allowed-confusables = ["，", "！", "（", "）", "："]

[tool.ruff.lint.per-file-ignores]
"tests/chaos/scenarios/[0-9][0-9]_*.py" = ["N999"]
"hi_agent/config/cognition_builder.py" = ["I001"]
"hi_agent/context/run_execution_context.py" = ["I001"]
"hi_agent/llm/http_gateway.py" = ["I001", "N814"]
"hi_agent/server/app.py" = ["I001", "N814"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
source = ["hi_agent"]
branch = true
omit = [
    "hi_agent/__main__.py",
    "hi_agent/samples/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
